--- a/package.json
+++ b/package.json
@@ -33,6 +33,8 @@
     "webpack-merge": "^4.2.2"
   },
   "dependencies": {
-    "phaser": "^3.50.0"
+    "phaser": "^3.50.0",
+    "phaser-raycaster": "^0.10.2",
+    "phaser3-rex-plugins": "^1.1.64"
   }
 }
