--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "webpack-merge": "^4.2.2"
   },
   "dependencies": {
+    "mrpas": "^2.0.0",
     "phaser": "^3.50.0",
     "phaser-raycaster": "^0.10.2",
     "phaser3-rex-plugins": "^1.1.64"
